--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "home":"https://VyshnaviThamatam.github.io/myapp",
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
@@ -8,9 +9,12 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
+    "predeploy": "npm run deploy",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
